--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Exercicio Firebase Authentication</string>
+    <string name="insert_name">Digite seu nome</string>
+    <string name="insert_email">Digite seu email</string>
+    <string name="insert_pass">Digite sua senha</string>
+    <string name="finish">Finalizar cadastro</string>
+    <string name="hogin">Login</string>
+    <string name="password">Senha</string>
+    <string name="email">Email</string>
 </resources>
