--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="email">Email</string>
     <string name="login_success">Login Realizado com Sucesso!</string>
     <string name="exit">Sair</string>
+    <string name="create_account">Criar nova conta</string>
 </resources>
