--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="login_success">Login Realizado com Sucesso!</string>
     <string name="exit">Sair</string>
     <string name="create_account">Criar nova conta</string>
+    <string name="user_name">Nome:</string>
+    <string name="user_email">Email:</string>
 </resources>
