Adicionar bimagem de favoritar mensagem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="new_message">Digite a nova mensagem</string>
     <string name="insert_your_message">Insira aqui as suas mensagens pessoais</string>
     <string name="favorite_message">Suas mensagens favoritas</string>
+    <string name="description">imagem de uma estrela, para clicar e favoritar a mensagem</string>
 </resources>
